2nd initial commit and added gitignore

--- a/client/static/index.html
+++ b/client/static/index.html
@@ -4,8 +4,11 @@
     <title>DawaCare</title>
     <link rel="stylesheet" href="./stylesheets/style.css">
     <script src="./lib/angular.js"></script>
+    <script src="./lib/angular-route.js"></script>
+    <script src="./lib/angular-cookies.js"></script>
     <script src="./main.js"></script>
-
+    <script src="./controllers/indexController.js"></script>
+    
   </head>
   <body>
     <div ng-view=""></div>
